# termSheet

./: pyproject.toml
src/ts_contract_alignment/: __init__.py  performance.py  pipeline.py
src/ts_contract_alignment/alignment/: __init__.py  alignment_engine.py  rule_matcher.py  semantic_matcher.py
src/ts_contract_alignment/analyzers/: __init__.py  clause_patterns.py  template_analyzer.py
src/ts_contract_alignment/api/: app.py
src/ts_contract_alignment/audit/: __init__.py  audit_logger.py  database.py  models.py
src/ts_contract_alignment/config/: __init__.py  config_manager.py  models.py
src/ts_contract_alignment/extractors/: __init__.py  hybrid_extractor.py  semantic_refiner.py  term_patterns.py  ts_extractor.py
src/ts_contract_alignment/generators/: __init__.py  annotation_manager.py  conflict_handler.py  contract_generator.py  document_exporter.py
src/ts_contract_alignment/interfaces/: __init__.py  alignment.py  analyzer.py  audit.py  extractor.py  generator.py  parser.py  review.py
src/ts_contract_alignment/models/: __init__.py  alignment.py  document.py  enums.py  extraction.py  template.py
src/ts_contract_alignment/parsers/: __init__.py  base.py  exceptions.py  language_detector.py  pdf_parser.py  serialization.py  word_parser.py
src/ts_contract_alignment/review/: __init__.py  action_handler.py  diff_highlighter.py  final_exporter.py  highlight_manager.py  review_manager.py  view_renderer.py
src/ts_contract_alignment/structuring/: models.py  pipeline.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_alignment_engine.py  test_audit_logger.py  test_config_manager.py  test_contract_generator.py  test_review_interface.py  test_semantic_refiner.py
