[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-contract-alignment"
version = "0.1.0"
description = "TS (Term Sheet) and Contract Template Intelligent Alignment System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TS Contract Alignment Team"}
]
keywords = ["legal", "contract", "term-sheet", "nlp", "alignment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Document processing
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    
    # NLP and semantic processing
    "langchain>=0.1.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    
    # Data processing
    "pandas>=2.0.0",
    
    # Template rendering
    "Jinja2>=3.1.0",
    
    # HTML parsing
    "beautifulsoup4>=4.12.0",
    
    # Database - PostgreSQL + pgvector
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Utilities
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hypothesis]
max_examples = 100
deadline = 60000

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
